[package]
name = "league-helper"
version = "0.1.0"
edition = "2021"
authors = ["mohammad javad"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde= { version = "1.0", features = ["derive"] }
sysinfo = "0.23.10"
clap = { version = "3.1.10", features = ["derive"] }
dirs = "4.0"
